# toolbar

./: README.md  biome.json  components.json  default.nix  flatpak.md  package-lock.json  package.json  pnpm-lock.yaml  shell.nix  svelte.config.js  tailwind.config.ts  vite.config.js
.github/workflows/: main.yml
src/: app.css  app.html  app.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs  main.rs  parsetood.rs  sledfunctions.rs  sqliteactions.rs
src/lib/: types.ts
src/lib/editorapp/: +page.svelte  customtaskitem.ts  customtasklist.ts  globalattr.ts  header.ts  searchControl.svelte  searchExtension.ts  searchextension.ts  styles.css  styles.scss
src/lib/helpers/: formater.ts
src/lib/notes/: functions.ts
src/lib/stores/: theme.ts  triggers.ts
src/routes/: +layout.svelte  +page.svelte  editorView.svelte  layout.svelte.ts  navbar.svelte  searchbar.svelte  test.json
